force-app/main/default/objects/SharedNote__c/SharedNote__c.object-meta.xml
<CustomObject>
    <label>Shared Note</label>
    <nameField>
        <displayFormat>NOTE-{000000}</displayFormat>
        <label>Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shared Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>