force-app/main/default/objects/SharedNote__c/fields/Authored_By__c.field-meta.xml
<CustomField>
    <fullName>Authored_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authored By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Shared_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>