force-app/main/default/objects/SharedNote__c/fields/Is_External_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_External_Visible__c</fullName>
    <formula>AND(
    ISPICKVAL(Visibility__c, &quot;External Visible&quot;),
    ISPICKVAL(Publication_Status__c, &quot;Published&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is External Visible</label>
    <type>Checkbox</type>
</CustomField>