force-app/main/default/objects/SharedNote__c/fields/Is_Internal_Only__c.field-meta.xml
<CustomField>
    <fullName>Is_Internal_Only__c</fullName>
    <formula>ISPICKVAL(Visibility__c, &quot;Internal Only&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Internal Only</label>
    <type>Checkbox</type>
</CustomField>