force-app/main/default/objects/SharedNote__c/fields/Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Note_Type__c</fullName>
    <label>Note Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Note_Type</valueSetName>
    </valueSet>
</CustomField>