force-app/main/default/objects/SharedNote__c/fields/Publication_Status__c.field-meta.xml
<CustomField>
    <fullName>Publication_Status__c</fullName>
    <label>Publication Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Unpublished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>