force-app/main/default/objects/SharedNote__c/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <label>Service Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Court &amp; Process</fullName>
            </value>
            <value>
                <fullName>Depositions</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>E-Discovery</fullName>
            </value>
            <value>
                <fullName>FCP</fullName>
            </value>
            <value>
                <fullName>General Client Care</fullName>
            </value>
            <value>
                <fullName>Investigations</fullName>
            </value>
            <value>
                <fullName>Records</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>