force-app/main/default/objects/SharedNote__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chatbot Visible</fullName>
            </value>
            <value>
                <fullName>Customer Visible</fullName>
            </value>
            <value>
                <fullName>External Visible</fullName>
            </value>
            <value>
                <fullName>Internal Only</fullName>
            </value>
            <value>
                <fullName>Partner Visible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>