force-app/main/default/objects/SharedNote__c/recordTypes/Internal_Note.recordType-meta.xml
<RecordType>
    <fullName>Internal_Note</fullName>
    <active>true</active>
    <label>Internal Note</label>
</RecordType>